# demo_app

./: .cursorrules  .gitignore  FEATURES.md  README.md  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: build.yml
app/expense_manager/: __init__.py  expense_filter.py  expense_service.py
app/models/: category.py  expense.py
app/rest/: api.py
tests/: conftest.py  test_create_expense.py  test_retrieve_expenses.py
tests/rest/: test_rest_api.py
