[tool.poetry]
name = "lsi_demo"
version = "0.1.0"
description = ""
authors = ["Bartosz Mikulski <mail@mikulskibartosz.name>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "3.0.3"

[tool.poetry.dev-dependencies]
black = "24.10.0"
pytest = "8.3.3"
mypy = "1.11.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

